welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	Motif()
             ^FlowerPot:17: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	Motif()
             ^FlowerPot:22: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	Motif()
             ^