welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code

//Faire un motif de fleur et placer au centre un noyau jaune
// rappeller 5x cette fonction

def growFlowers() 
{

	Motif(Color.red)
	avance(4)
	Motif()
	recule(5)
	droite()
	avance(2)
	gauche()
	avance(2)
	Motif()
	recule(3)
	droite()
	avance(2)
	gauche()
	Motif()
	avance(3)
	
	
	
}


def faireFleurs(c:Color)
{
	setCouleurBrosse(c)
	baisseBrosse()
	avance(2)
	recule()
	gauche()
	avance()
	recule(2)
	avance()
	droite()
    	setCouleurBrosse(Color.yellow)
	baisseBrosse()
	leveBrosse()
	avance()
	
	
	

}




def Motif(c:Color)
{	
faireFleurs(c)

}


